--- a/index.html
+++ b/index.html
@@ -12,3 +12,11 @@
     <img src="https://assets2.cbsnewsstatic.com/hub/i/r/2023/11/06/7d41eeaa-d21b-49bc-9c2f-baf60d76ee18/thumbnail/1200x630/a1c90b435cf2f1d096faee3967bb5d10/bb0b28a041153d6d242c5a00113987a0.jpg?v=ae9b993fd90e26d2b155463d98235421" alt="this is a picture of the likley voters for the 2 runner ups of the 2024 election" width=400px height=300px>
 </body>
 </html>
+<p>Taiwan, a small and vibrant Asian democracy on the doorstep of a much larger authoritarian neighbor, holds presidential and parliamentary elections on Saturday and the results will reverberate far beyond its borders.</p>
+<p>The outcome is being closely watched by China’s Communist leaders who have long claimed Taiwan as part of their territory despite having never controlled it.</p>
+<p>The vast majority of people in Taiwan don’t want to be ruled by China, whose strongman leader Xi Jinping has tightened his grip at home as the country becomes more aggressive towards its neighbors.</p>
+<p>China is openly opposed to Taiwan’s current ruling party and has framed the election as a choice between “war and peace, prosperity and decline.” Xi delivered a fresh warning to Taiwan in a New Year’s Eve speech, declaring: “The reunification of the motherland is a historical inevitability.”</p>
+<p>Taiwan also remains the biggest source of tension between China and the US, the island’s main international backer and arms supplier, and relations between the world’s two superpowers have been rocky for years.</p>
+<p>How China responds to the choices made by Taiwan’s voters this weekend will test whether Beijing and Washington can manage tensions, or move toward further confrontation – and even conflict.</p>
+<p>Here’s what you need to know about this crucial election:</p>
+<img src="" alt="">
